# July26PythonLLD

./: .gitignore  pyproject.toml
src/02_Classes_Objects/: 01_classes_and_objects.py  02_driver_class.py  03_object_memory_and_state.py  04_str_and_repr.py  05_method_types.py  06_type_isinstance_issubclass.py  07_oop_roadmap.py  08_rider_class.py  09_trip_class.py  10_main_integration.py
src/03_Encapsulation_Properties_Constructors/: 01_encapsulation_problem.py  02_python_access_conventions.py  03_name_mangling.py  04_properties_getters_setters.py  05_descriptor_protocol_intro.py  06_new_vs_init.py  07_constructor_patterns.py  08_driver_refactoring.py
src/04_Inheritance_MRO_Polymorphism/: 01_inheritance_and_overriding.py  02_multiple_inheritance_and_mro.py  03_cooperative_super.py  04_polymorphism_and_duck_typing.py
src/05_OOP-4 — ABCs, Protocols and Mixins/: 01_abstract_base_classes.py  02_abc_vs_duck_typing.py  03_protocols_structural_subtyping.py  04_mixins.py  05_payment_processing_lab.py
src/06_OOP5_Magic_Methods_And_Python_Data_Model/: 01_zone_hashing_mystery.py  02_dunders_as_protocol.py  03_representation_methods.py  04_eq_hash_contract.py  05_context_managers.py  06_callable_objects.py  07_deck_container_protocol.py  08_summary_and_homework.py
src/07_OOP_Lab_Mini_Library_Management_System/: 1_PRD  Book.py  Loan.py  User.py
src/08_Concurrency1_Processes_Threads_and_GIL/: 01_threads_and_processes.py  02_spawning_threads.py  03_concurrency_vs_parallelism.py  04_cpu_bound_threading_surprise.py  05_understanding_the_gil_part1.py  07_cpu_vs_io_bound.py  (+3 more)
(+9 files in other folders)
