[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lld"
version = "0.1.0"
description = "Minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
python-lld = "python_lld.cli:main"
